--- a/app/views/people/new.html.erb
+++ b/app/views/people/new.html.erb
@@ -1,6 +1,7 @@
 <%= form_for @person do |f| %>
+  <%= f.label :name %>
   <%= f.text_field :name %> <br /><br />
 
-  
+
  <%= f.submit %>
 <% end %>
