--- a/app/views/people/new.html.erb
+++ b/app/views/people/new.html.erb
@@ -2,6 +2,15 @@
   <%= f.label :name %>
   <%= f.text_field :name %> <br /><br />
 
+  <%= f.fields_for :addresses do |addr| %>
+    <%= addr.label :street_address_1 %>
+    <%= addr.text_field :street_address_1 %>
+
+    <%= addr.label :street_address_2 %>
+    <%= addr.text_field :street_address_2 %>
+
+     
+
 
  <%= f.submit %>
 <% end %>
