--- a/app/views/people/new.html.erb
+++ b/app/views/people/new.html.erb
@@ -9,6 +9,9 @@
     <%= addr.label :street_address_2 %>
     <%= addr.text_field :street_address_2 %>
 
+    <%= addr.label :city %>
+    <%= addr.text_field :city %>
+
      
 
 
