--- a/app/views/people/new.html.erb
+++ b/app/views/people/new.html.erb
@@ -12,7 +12,15 @@
     <%= addr.label :city %>
     <%= addr.text_field :city %>
 
-     
+    <%= addr.label :state %>
+    <%= addr.text_field :state %><br>
+
+    <%= addr.label :zipcode %>
+    <%= addr.text_field :zipcode %><br>
+
+    <%= addr.label :address_type %>
+    <%= addr.text_field :address_type %><br>
+  <% end %> 
 
 
  <%= f.submit %>
